--- a/PrinterServer/src/main/resources/templates/index.html
+++ b/PrinterServer/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
     <form action="/file/uploading" method="post" enctype="multipart/form-data">
         <span>选择打印机：</span>
-        <input type="text" name="device"/><br>
+        <input type="text" name="device" value="x00000001"/><br>
         <span>选择打印文件：</span>
         <input type="file" name="file"/><br>
         <input type="submit" value="打印"/>
