--- a/PrinterServer/src/main/resources/templates/index.html
+++ b/PrinterServer/src/main/resources/templates/index.html
@@ -22,11 +22,16 @@
 
     <form action="/file/uploading" method="post" enctype="multipart/form-data">
         <span>选择打印机：</span>
-        <input type="text" name="device" value="x00000001"/><br>
+        <select name="device">
+            <option>x00000001</option>
+        </select><br>
         <span>选择打印文件：</span>
         <input type="file" name="file"/><br>
         <input type="submit" value="打印"/>
     </form>
 </div>
+
+
+
 </body>
 </html>
