--- a/PrinterServer/src/main/resources/templates/index.html
+++ b/PrinterServer/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         <!--        <div class="box2 flex-col"><span class="info1">选择打印文件</span></div>-->
     </div>
 
-    <form action="/file/uploading" method="post" enctype="multipart/form-data">
+    <form action="/file/upload" method="post" enctype="multipart/form-data">
         <span>选择打印机：</span>
         <select name="device">
             <option>x00000001</option>
